[package]
name = "win_tcache_multi"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "xthread"
harness = false

[profile.release]
lto = "fat"
opt-level = 3
debug-assertions = false
debug = 0
codegen-units = 1
overflow-checks = false

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
ctrlc = "3.4.5"
dunce = "1.0.5"
tokio = { version = "1.43.0", features = ["full"] }

[dev-dependencies]
criterion = "0.5.1"

[build-dependencies]
cc = "1.0"
bindgen = "0.71.1"
